syntax = "proto3";
package common;

message CommonValues {
    int64 someId = 1;
}