syntax = "proto3";
import "shared.proto";
package proto;

message SayHelloRequest {
    CommonValues values = 1;
    string yourName = 2;
}

message SayHelloResponse {
    string message = 1;
}

message EatAppleRequest {
    int32 num = 1;
    string stringValue = 2;
    bool boolValue = 3;
}

message EatAppleResponse {
    string message = 1;
}

message TestProtoRequest {
}


message TestProtoResponse {
    message child {
        int64 childValue = 1;
    }
    CommonValues values = 1;
    string stringValue = 2;
    int32 int32Value = 3;
    int64 int64Value = 4;
    child c1 = 5;
    child c2 = 6;
    repeated int64 int64Slice = 7;
    repeated child childs = 8;
}

service YourService {
    rpc sayHello (SayHelloRequest) returns (SayHelloResponse) {}
    rpc eatApple (EatAppleRequest) returns (EatAppleResponse) {}
    rpc testProto (TestProtoRequest) returns (TestProtoResponse) {}
}